[package]
name = "q3a-muncher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bytes = "1.2.0"

[dev-dependencies]
serde = { version = "1.0.140", features = ["derive"] }
heck = "0.4.0"
strum = { version = "0.24.1", features = ["derive"] }
# strum_macros = "0.24.2"
