[package]
name = "q3a-muncher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
num-traits = "0.2.15"
static_assertions = "1.1.0"
thiserror = "1.0.31"

[dev-dependencies]
serde = { version = "1.0.140", features = ["derive"] }
heck = "0.4.0"
strum = { version = "0.24.1", features = ["derive"] }
serde_json = "1.0.82"
